# hord

./: .gitignore  ChangeLog.md  LICENSE  README.rst  hord.cabal  stack.yaml
.github/workflows/: continuous-integration.yml
app/: Main.hs
src/: Build.hs  Cli.hs  Compile.hs  Config.hs  Link.hs
